--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,58 +1,220 @@
-@media (max-width: 1199px) {
-    /*header*/
+/* Google Font CDN Link */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins" , sans-serif;
+}
 
-    .header_wrapper .navbar-expand-lg .navbar-nav {
-        align-items: center;
+
+
+/* body{
+  min-height: 100vh;
+  width: 100%;
+  background: #c8e8e9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+
+
+
+.header_wrapper .navbar {
+    padding: .9375rem 0;
+    background-color: var(--bg-white);
+    -webkit-box-shadow: 0 .5rem .375rem -0.375rem rgb(0 0 0 / 40%);
+    box-shadow: 0 .5rem .375rem -0.375rem rgb(0 0 0 / 40%);
+    -webkit-transition: background 0s ease-in-out 0s, margin-top 0s ease-in-out 0s, opacity 0s ease-in-out 0s;
+    transition: background 0s ease-in-out 0s, margin-top 0s ease-in-out 0s, opacity 0s ease-in-out 0s;
+}
+
+.header_wrapper .navbar-toggler {
+    border: 0;
+    color: var(--primary-text);
+    line-height: 2;
+}
+
+.header_wrapper .navbar-toggler:focus {
+    box-shadow: none;
+}
+
+.header_wrapper .nav-item {
+    margin: 0 .625rem;
+}
+
+.header_wrapper .nav-item .nav-link {
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--primary-text);
+    display: inline-block;
+}
+
+.header_wrapper .nav-item .nav-link.active,
+.header_wrapper .nav-item .nav-link:hover {
+    color: var(--secondary-text);
+}
+
+.navbar.header-scrolled {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    background-color: #c1adbd;
+    -webkit-animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
+    animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
+}
+
+@keyframes fadeInDown {
+    0% {
+        top: -30%;
     }
 
-    .header_wrapper .navbar-expand-lg .navbar-nav .nav-link {
-        padding: 0;
-        font-size: .875rem;
+    50% {
+        top: -15%;
     }
 
-    .main-btn {
-        font-size: .875rem;
+    100% {
+        top: 0;
     }
 }
 
-@media (max-width:991) {
-
-    /*custom css*/
-    section {
-        padding: 1.875rem 0;
-    }
-
-    /*navbar*/
-    .header-scrolled {
-        height: auto;
-    }
-
-    .header_wrapper .menu-navbar-nav {
-        text-align: center;
-        padding-bottom: .9375rem;
-    }
-.header_wrapper .nav-item .nav-link{
-    margin-top: .9375rem;
+.containers{
+    margin: 5rem auto;
+  width: 85%;
+  background: #fff;
+  border-radius: 6px;
+  padding: 20px 60px 30px 40px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+.containers .contents{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.containers .contents .left-side{
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15px;
+  position: relative;
+}
+.contents .left-side::before{
+  content: '';
+  position: absolute;
+  height: 70%;
+  width: 2px;
+  right: -15px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #afafb6;
+}
+.contents .left-side .details{
+  margin: 14px;
+  text-align: center;
+}
+.contents .left-side .details i{
+  font-size: 30px;
+  color: #3e2093;
+  margin-bottom: 10px;
+}
+.contents .left-side .details .topic{
+  font-size: 18px;
+  font-weight: 500;
+}
+.contents .left-side .details .text-one,
+.contents .left-side .details .text-two{
+  font-size: 14px;
+  color: #afafb6;
 }
 
+
+.containers .contents .right-side{
+  width: 75%;
+  margin-left: 75px;
+}
+.contents .right-side .topic-text{
+  font-size: 23px;
+  font-weight: 600;
+  color: #3e2093;
+}
+.right-side .input-box{
+  height: 50px;
+  width: 100%;
+  margin: 12px 0;
+}
+.right-side .input-box input,
+.right-side .input-box textarea{
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: #F0F1F8;
+  border-radius: 6px;
+  padding: 0 15px;
+  resize: none;
+}
+.right-side .message-box{
+  min-height: 110px;
+}
+.right-side .input-box textarea{
+  padding-top: 6px;
+}
+.right-side .button{
+  display: inline-block;
+  margin-top: 12px;
+}
+.right-side .button input[type="button"]{
+  color: #fff;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: #3e2093;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button input[type="button"]:hover{
+  background: #5029bc;
 }
 
-@media (max-width: 767px) {
-    /*custom css*/
-    h1{
-        font-size: 1.875rem;
-        line-height: 2.5rem;
-    }
-    h3{
-        font-size: 1.75rem;
-        line-height: 2.1875rem;
-    }
-    h5{
-        font-size: 1.25rem;
-    }
-    p{
-        font-size: .8125rem;
-        line-height: 1.5rem;
-    }
-    
+@media (max-width: 950px) {
+  .containers{
+    width: 90%;
+    padding: 30px 40px 40px 35px ;
+  }
+  .containers .contents .right-side{
+   width: 75%;
+   margin-left: 55px;
+}
+}
+@media (max-width: 820px) {
+  .containers{
+    margin: 40px 0;
+    height: 100%;
+  }
+  .containers .contents{
+    flex-direction: column-reverse;
+  }
+ .containers .contents .left-side{
+   width: 100%;
+   flex-direction: row;
+   margin-top: 40px;
+   justify-content: center;
+   flex-wrap: wrap;
+ }
+ .containers .contents .left-side::before{
+   display: none;
+ }
+ .containers .contents .right-side{
+   width: 100%;
+   margin-left: 0;
+ }
 }
