--- a/CSS/media.css
+++ b/CSS/media.css
@@ -19,7 +19,7 @@
 } */
 
 
-
+/* 
 
 .header_wrapper .navbar {
     padding: .9375rem 0;
@@ -79,7 +79,7 @@
     100% {
         top: 0;
     }
-}
+} */
 
 .containers{
     margin: 5rem auto;
