--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -640,8 +640,28 @@ p {
 .footer_wrapper .copyright-section a {
     color: rgb(26, 24, 24);
 }
+.arrow-btn{
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 9;
 
-
+}
+.arrow-btn a{
+    height: 39px;
+    width: 39px;
+    text-align: center;
+    background: #141111;
+    display: block;
+    border-radius: 50%;
+    cursor: pointer;
+    
+}
+.arrow-btn a span{
+    color: #ede2f0;
+line-height: 39px;
+font-size: 25px;
+}
 
 
 
