--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,7 +13,7 @@
     --secondary-color: #79522d;
     --bg-color: #f4f4f4;
     --bg-white: #fff;
-    --bg-black: #000;
+    --bg-black:#000;
 
     /* Text Style */
     --primary-font: 'Poppins', sans-serif;
@@ -24,7 +24,6 @@
     --text-black: #151515;
     --text-gray: #e4e4e4;
 }
-
 body {
     font-family: var(--primary-font);
     background-color: var(--bg-white);
@@ -330,7 +329,7 @@ p {
 
 .room-item:hover .room-content {
     opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
+    -webkit-transform: scale3d(1, 2, 1);
     transform: scale3d(1, 1, 1);
 }
 
@@ -358,7 +357,7 @@ p {
 
 .service-menu-area ul li a .service-icon:hover,
 .service-menu-area ul li a.active .service-icon {
-    background-color: #836f89;
+    background-color: #1f1c20;
     color: #0d0d0d;
     box-shadow: 0 .125rem 1.25rem rgb(34 30 31 / 40%);
 }
@@ -640,14 +639,16 @@ p {
 .footer_wrapper .copyright-section a {
     color: rgb(26, 24, 24);
 }
-.arrow-btn{
+
+.arrow-btn {
     position: fixed;
     bottom: 20px;
     right: 30px;
     z-index: 9;
 
 }
-.arrow-btn a{
+
+.arrow-btn a {
     height: 39px;
     width: 39px;
     text-align: center;
@@ -655,12 +656,13 @@ p {
     display: block;
     border-radius: 50%;
     cursor: pointer;
-    
+
 }
-.arrow-btn a span{
+
+.arrow-btn a span {
     color: #ede2f0;
-line-height: 39px;
-font-size: 25px;
+    line-height: 39px;
+    font-size: 25px;
 }
 
 
@@ -846,5 +848,36 @@ font-size: 25px;
         width: 100%;
         margin-left: 0;
     }
+
+    .arrow-btn {
+        position: fixed;
+        bottom: 5px;
+        right: 10px;
+        /* z-index: 9; */
+    
+    }
+    
+    
+    .arrow-btn a span {
+        color: #ede2f0;
+        line-height: 35px;
+        font-size: 20px;
+    }
+
+
+
+    
+    .arrow-btn a {
+        height: 35px;
+        width: 35px;
+        text-align: center;
+        background: #141111;
+        display: block;
+        border-radius: 50%;
+        cursor: pointer;
+    
+    }
+    
+    
 
 }
